@@ -24,7 +24,7 @@ public class ValoracioDaoJdbc implements ValoracioDao {
             preparedStatement.setString(1, isbn);
             preparedStatement.setString(2, username);
             List<Valoracio> valoracioList = valoracioRowMapper.map(preparedStatement.executeQuery());
-            return valoracioList.isEmpty() ? null : valoracioList.get(0);
+            return valoracioList.isEmpty() ? null : valoracioList.getFirst();
         } catch (Exception e) {
             throw new RuntimeException(e.getMessage());
         }
@@ -53,49 +53,40 @@ public class ValoracioDaoJdbc implements ValoracioDao {
     }
 
     @Override
-    public void save(Valoracio valoracio) {
-        if (findByLlibreIsbnAndUsername(valoracio.getIsbn(), valoracio.getUsername()) != null) {
-            update(valoracio);
-        } else {
-            insert(valoracio);
-        }
-    }
-
-    @Override
-    public void insert(Valoracio valoracio) {
+    public int insert(Valoracio valoracio) {
         String sql = "INSERT INTO valoracio (isbn, username, puntuacio, data) VALUES (?, ?, ?, ?)";
         try (PreparedStatement preparedStatement = databaseConnection.prepareStatement(sql)) {
             preparedStatement.setString(1, valoracio.getIsbn());
             preparedStatement.setString(2, valoracio.getUsername());
             preparedStatement.setInt(3, valoracio.getPuntuacio());
             preparedStatement.setDate(4, java.sql.Date.valueOf(valoracio.getData()));
-            preparedStatement.executeUpdate();
+            return preparedStatement.executeUpdate();
         } catch (Exception e) {
             throw new RuntimeException(e.getMessage());
         }
     }
 
     @Override
-    public void update(Valoracio valoracio) {
+    public int update(Valoracio valoracio) {
         String sql = "UPDATE valoracio SET puntuacio = ?, data = ? WHERE isbn = ? and username = ?";
         try (PreparedStatement preparedStatement = databaseConnection.prepareStatement(sql)) {
             preparedStatement.setInt(1, valoracio.getPuntuacio());
             preparedStatement.setDate(2, java.sql.Date.valueOf(valoracio.getData()));
             preparedStatement.setString(3, valoracio.getIsbn());
             preparedStatement.setString(4, valoracio.getUsername());
-            preparedStatement.executeUpdate();
+            return preparedStatement.executeUpdate();
         } catch (Exception e) {
             throw new RuntimeException(e.getMessage());
         }
     }
 
     @Override
-    public void delete(String isbn, String username) {
+    public int delete(String isbn, String username) {
         String sql = "DELETE FROM valoracio WHERE isbn = ? and username = ?";
         try (PreparedStatement preparedStatement = databaseConnection.prepareStatement(sql)) {
             preparedStatement.setString(1, isbn);
             preparedStatement.setString(2, username);
-            preparedStatement.executeUpdate();
+            return preparedStatement.executeUpdate();
         } catch (Exception e) {
             throw new RuntimeException(e.getMessage());
         }
